# filegov

./: .gitignore  create_db.py  db_choice.py  edit_tree_model.py  file_info.py  gov_files.py  helper.py  input_date.py  input_date.ui  item_edit.py  load_db_data.py  main_window.py  main_window.ui  pyproject.toml  run_app.py  sel_opt.py  sel_opt.ui  set_fields.py  utilities.py
filegov/: create_db.py  db_choice.py  db_choice.ui  edit_tree_model.py  file_info.py  gov_files.py  helper.py  input_date.py  item_edit.py  load_db_data.py  main_window.py  main_window.ui  run_app.py  sel_opt.py  set_fields.py  set_fields.ui  table_model.py  utilities.py
tests/: test_filegov.py
