[tool.poetry]
name = "filegov"
version = "0.1.0"
description = "Manage files to easy search with tags, authors etc."
authors = ["Michal <mihal.d44@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pyqt5-tools = "^5.12"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
